--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -11,7 +11,7 @@
   margin: 40px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .ranking-container {
@@ -51,6 +51,10 @@
   align-items: center;
 }
 
+.btn-container {
+  display: flex;
+}
+
 .submit-btn {
   padding: 15px;
   border-radius: 30px;
@@ -59,9 +63,10 @@
   letter-spacing: 0.3rem;
   font-size: 1rem;
   font-weight: 700;
-  text-decoration: none;
-  display: block;
+  border: none;
   text-align: center;
+  width: 100%;
+  margin-top: 15px;
 }
 .submit-btn:focus {
   background-color: var(--white);
